Decoration addition on the bottom left

--- a/index.html
+++ b/index.html
@@ -38,13 +38,15 @@
         <span id="textonegrito"> finesse</span> para todo aquele que
         estiver ali
       </div>
-
       <footer>
         <ul>
           <li><a href="https://www.instagram.com/israelmenddes/" target="_blank">Instagram</a></li>
           <li><a href="" target="_blank">Fale Conosco</a></li>
         </ul>
       </footer>
+      <div id="decoracao">
+        <img src="./assets/balls-decoration.svg" alt="">
+      </div>
     </div>
   </body>
 </html>
