--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
         </p>
       </div>
       <div id="texto">
-        Nós criamos ambientes <span id="textonegrito"> exclusívos </span> e
+        <p> Nós criamos ambientes <span id="textonegrito"> exclusívos </span> e
         <span id="textonegrito"> únicos </span> , com muito bom gosto e
         profissionalismo, investimos tempo e
-        <span id="textopersonalizado">dedicação no seu projeto.</span>
+        <span id="textopersonalizado">dedicação no seu projeto.</span></p>
         <br />
         <br />
 
-        Tenha
+        <p>Tenha
         <span id="textopersonalizado">ambientes limpos</span>
-        e bem decorados, transmitindo <span id="textonegrito"> elegância</span> e
+        e bem decorados, transmitindo <strong> elegância</strong> e
         <span id="textonegrito"> finesse</span> para todo aquele que
-        estiver ali
+        estiver ali</p>
       </div>
       <footer>
         <ul>
