Fonts bold version addition to the HTML

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <meta charset="UTF-8" />
@@ -25,27 +25,35 @@
         </p>
       </div>
       <div id="texto">
-        <p> Nós criamos ambientes <span id="textonegrito"> exclusívos </span> e
-        <span id="textonegrito"> únicos </span> , com muito bom gosto e
-        profissionalismo, investimos tempo e
-        <span id="textopersonalizado">dedicação no seu projeto.</span></p>
+        <p>
+          Nós criamos ambientes <span id="textonegrito"> exclusívos </span> e
+          <span id="textonegrito"> únicos </span> , com muito bom gosto e
+          profissionalismo, investimos tempo e
+          <span id="textopersonalizado">dedicação no seu projeto.</span>
+        </p>
         <br />
         <br />
 
-        <p>Tenha
-        <span id="textopersonalizado">ambientes limpos</span>
-        e bem decorados, transmitindo <strong> elegância</strong> e
-        <span id="textonegrito"> finesse</span> para todo aquele que
-        estiver ali</p>
+        <p>
+          Tenha
+          <span id="textopersonalizado">ambientes limpos</span>
+          e bem decorados, transmitindo <strong> elegância</strong> e
+          <span id="textonegrito"> finesse</span> para todo aquele que estiver
+          ali
+        </p>
       </div>
       <footer>
         <ul>
-          <li><a href="https://www.instagram.com/israelmenddes/" target="_blank">Instagram</a></li>
+          <li>
+            <a href="https://www.instagram.com/israelmenddes/" target="_blank"
+              >Instagram</a
+            >
+          </li>
           <li><a href="" target="_blank">Fale Conosco</a></li>
         </ul>
       </footer>
       <div id="decoracao">
-        <img src="./assets/balls-decoration.svg" alt="">
+        <img src="./assets/balls-decoration.svg" alt="" />
       </div>
     </div>
   </body>
