Addition of the line above the footer

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </p>
       </div>
       <footer>
+        <div id="line"></div>
         <ul>
           <li>
             <a href="https://www.instagram.com/israelmenddes/" target="_blank"
